api location data working

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/thisisjoshford/city-explorer#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^25.1.0",
+    "superagent": "^5.2.2",
     "supertest": "^4.0.2"
   }
 }
