jest sample test configured and running

--- a/package.json
+++ b/package.json
@@ -22,8 +22,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "superagent": "^5.2.2"
+  },
+  "devDependencies": {
     "jest": "^25.1.0",
-    "superagent": "^5.2.2",
     "supertest": "^4.0.2"
-  }
+  },
+
+"jest": {
+  "testEnvironment": "node",
+  "coveragePathIgnorePatterns": [
+    "/node_modules/"
+  ]
+}
 }
