--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "superagent": "^5.2.2"
+    "superagent": "^5.2.2",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "jest": "^25.1.0",
